# python_the_west

./: .gitignore  LICENSE  README.md  pyproject.toml  report.txt  test.py
automation_script/: script.py  script_data.py  script_json_schema.json  script_scheduler.py
automation_scripts/: product_work_cycle.py  work_cycle.py
automation_scripts/account_orchestration/: accound_data_script_manager.py  account_data_script_manager.py  accounts_data.py
automation_scripts/current_event_script/: christmas_script.py  easter_script.py  heart_script.py  independence_script.py  muertos_script.py  oktoberfest_script.py
automation_scripts/current_event_script.py/: independence_script.py
automation_scripts/default script/: script.py  script_data.py
automation_scripts/default_script/: script.py  script_data.py  script_json_schema.json
automation_scripts/example_scripts/: cycle_hourly_jobs.py  solve_daily_quests_script.py  work_cycle_v1.py
automation_scripts/exp_gain_script/: exp_script.py  exp_script_executor.py  exp_script_load.py
automation_scripts/farm_event/: event_drop_script.py  farm_script.py
automation_scripts/inifinite_duels/: duel_npc_rule.py  (+2 more)
connection_sessions/: standard_request_session.py  tor_handler.py
the_west_inner/: bag.py  buffs.py  caching_decorators.py  chat.py  chat_data.py  chat_data_reader.py  consumable.py  crafting.py  currency.py  current_event.py  current_event_types.py  duels.py  equipment.py  game_classes.py  game_server.py  gold_finder.py  init_data.py  item_set_general.py  items.py  linear_quest_manager.py  login.py  map.py  marketplace.py  marketplace_buy.py  marketplace_pickup_manager.py  marketplace_sell.py  misc_scripts.py  movement.py  movement_manager.py  notebook.py  player_data.py  premium.py  quest_requirements.py  quest_requirements_builders.py  ranking.py  reports.py  requests_handler.py  requests_rate_limiter.py  saloon.py  skills.py  (+11 more)
(+115 files in other folders)
