[tool.poetry]
name = "python-the-west"
version = "0.1.0"
description = "Interact with the browser game 'The west' programatically using http requests."
authors = ["MariusSilviuHriscu <hriscumarius65536@gmail.com>"]
readme = "README.md"
packages = [{ include = "the_west_inner" },
    { include = "automation_scripts" }
    ]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
requests = "^2.31.0"
bs4 = "^0.0.1"
dateparser = "^1.1.8"
stem = "^1.8.2"
pysocks = "^1.7.1"
sqlalchemy = "^2.0.25"
matplotlib = "^3.8.2"
bidict = "^0.22.1"
jupyter = "^1.0.0"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
